--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :gender, "性別" %><br />
+    <%=f.label :gender, "性別" %><br />
     <%=f.radio_button :gender, 1, autofocus: true%>Men
     <%=f.radio_button :gender, 2, autofocus: true%>Lady
   </div>
@@ -40,6 +40,11 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :introduction, '紹介文' %><br />
+    <%= f.text_area :introduction, autofocus: true, placeholder: "自己紹介文を入力してください", rows: "10"%>
   </div>
 
   <div class="actions">
