--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,14 +7,10 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    %link{crossorigin: "anonymous", href: "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", integrity: "sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", rel: "stylesheet"}
   %body
-    %header 
-      - if user_signed_in?
-        %div
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトすんの？' }
-          = link_to "投稿ボタン", new_post_path, class: 'newpost-btn'
-      - else
-        %div
-          = link_to "ログイン", new_user_session_path, class: ''
-          = link_to "新規登録", new_user_registration_path, class: ''
-    = yield
+    = render partial: "layouts/header", locals: { user: @currentuser}
+    .main
+      .main-contents
+        = yield
+    = render "layouts/footer"
