--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,35 @@
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
 @import "header";
+@import "footer";
 @import "reset";
 @import "posts";
+@import "users";
+@import "font-awesome";
+
+
+html{
+  width: 100%;
+  height: 100%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+body{
+  height: 100%;
+  width: 100%;
+}
+.main {
+  height: calc(100% - 7em);
+  width: 100%;
+  overflow: scroll;
+  background-color: rgb(255, 252, 248);
+  // background-color: #FBF7F1;
+  box-sizing: border-box;
+  // background-color: rgb(255, 250, 244);
+  position: relative;
+  .main-contents {
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    // padding: 2em 0;
+  }
+}
