--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,18 +1,160 @@
-.post {
-  float: left;
-  &__user {
-    border: 1px solid #999999;
-    display: flex;
-    &__icon {
+.show {
+  &__header {
+    box-sizing: border-box;
+    border-bottom: solid 1px  rgb(204, 204, 204);
+    box-shadow:0px 4px 10px rgba(68, 68, 68, 0.3);
+    background-color: #fff;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 4em;
+    width: 100%;
+    height: 4em;
+    &__user {
+      width: 70%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      &__left{
+        display: flex;
+        &__icon {
+          line-height: 4em;
+          padding: 0 1em;
+          img {
+            border-radius: 1.5em;
+          }
+        }
+        &__contents {
+          &__name {
+            font-size: 1.5em;
+          }
+          &__else {
+            opacity: 0.8;
+            display: flex;
+            &__id {
+              border-right: solid 1px rgba(128, 128, 128, 0.7);
+              padding-right: 0.5em;
+            }
+            &__gender {
+              border-right: solid 1px rgba(128, 128, 128, 0.7);
+              padding: 0 0.5em;
+            }
+          }
+        }
+      }
+      &__right {
+        line-height: 4em;
+        &__follow {
+
+        }
+      }
     }
   }
-  &__content {
-    border: 1px solid #999999;
-    display: flex;
+  &__contents {
+    margin-top: 5em;
+    // width: 100%;
+    &__post {
+      // width: 100%;
+      display: flex;
+      &__left {
+        // width:100%;
+        padding: 0 0 !important;
+        background-color: #fff;
+        border: solid 1px rgba(128, 128, 128, 0.3);
+        border-radius: 0.25em;
+        margin-right: 0.5em;
+        // box-sizing: border-box;
+        &__image {
+          width: 100%;
+          height: auto;
+          img {
+            
+            border-radius: 0.25em 0.25em 0 0;
+            width: 100%;
+            height: auto;
+            margin:0 auto;
+          }
+        }
+        &__favorite{
+          &__box {
+            border: solid 1px rgba(128, 128, 128, 0.3);
+            padding: 0 0 !important;
+            margin: 0.5em;
+            border-radius: 0.25em;
+            a {
+              display: flex;
+              justify-content: center;
+              border-radius: 0.25em;
+              padding: 0.5em 0;
+              .show__contents__post__left__favorite__box__icon {
+                margin: 0 0.25em;
+              }
+              .show__contents__post__left__favorite__box__count {
+                margin: 0 0.25em;   
+              }
+            a:hover {
+            }
+            }
+          }
+        }
+      }
+      &__right {
+        background-color: #fff;
+        border: solid 1px rgba(128, 128, 128, 0.3);
+        border-radius: 0.25em;
+        margin-left: 0.5em;
+        padding:1em 0;
+        // width:100%;
+        box-sizing: border-box;
+        position: relative;
+        &__title {
+          padding: 0.5em 0;
+        }
+        &__introduction {
+          font-size: 80%;
+          color: rgba(0, 0, 0, 0.6);
+          border-bottom: solid 1px rgba(128, 128, 128, 0.3);
+          padding: 0.5em 0;
+          a {
+            float: right;
+            font-size: 75%;
+            color: rgb(117, 117, 117);
+          }
+          a:hover {
+            opacity: 0.3 !important;
+          }
+        }
+        &__body {
+        }
+        &__date {
+          position: absolute;
+          bottom: 0;
+          margin: 1em 0;
+          padding: 0.5em 0 0 0;
+          color: rgba(0, 0, 0, 0.3);
+          // opacity: 0.3;
+          border-top: solid 1px rgba(128, 128, 128, 0.3);
+          width: calc(100% - 2em);
+        }
+      }
+    }
+    &__comments {
+
+    }
   }
 }
 .comment {
   &__new {
     display: none;
   }
+}
+
+.favorite-delete {
+  color: white;
+  background-color: rgb(207, 0, 45);
+}
+
+.favorite-create {
+  background-color: rgb(255, 252, 248);
+  color: gray;
 }
