--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,127 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.user {
+  display: flex;
+  border-bottom: solid 1px  rgba(128, 128, 128, 0.7);
+  background-color: #fff;
+  padding: 2em;
+  &__leftbox {
+    &__icon {
+      height: 7em;
+      width: 7em;
+      padding: 0.25em 0;
+      margin: 0 auto;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 3.5em;
+        margin: 0 auto;
+      }
+    }
+    &__btn {
+      padding: 0.25em 0;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      .btn-primary {
+        background-color: #002966;
+        opacity: 0.9;
+        border: none;
+      }
+      #edit {
+        width: 50%;
+        background-color: #808080;
+        opacity: 0.5;
+        padding: 0 0;
+        height: 2em;
+        a {
+          color: white;
+          text-decoration: none;
+          line-height: 2em;
+          display: block;
+          // position: absolute;
+          // top:0;
+          // left:0;
+          width:100%;
+          height:100%;
+        }
+      }
+      #follow {
+      }
+    }
+    &__count {
+      padding: 0.25em 0;
+      font-size: 75%;
+      display: flex;
+      justify-content: center;
+      &__follow {
+      }
+      &__follower {
+      }
+    }
+  }
+  &__rightbox {
+    &__top {
+      &__name {
+        font-size: 1.5em;
+      }
+      &__contents {
+        display: flex;
+        opacity: 0.8;
+        &__id {
+          border-right: solid 1px rgba(128, 128, 128, 0.7);
+          padding-right: 0.5em;
+        }
+        &__gender {
+          border-right: solid 1px rgba(128, 128, 128, 0.6);
+          padding: 0 0.5em;
+        }
+      }
+    }
+    &__bottom {
+      padding-top: 1em;
+      &__introduction{
+        opacity: 0.9;
+        overflow: scroll;
+      }
+    }
+  }
+}
+.tab {
+  margin: 1em 0; 
+  border: solid 1px  rgba(128, 128, 128, 0.3);
+  background-color: #fff;
+  line-height: 3em;
+  .nav {
+    .active{
+      background-color: rgba(0, 0, 0, 0.5) !important;
+      color: white !important;
+      opacity: 1.0 !important;
+      .userpagelist{
+        a {
+          color: white;          
+          text{
+            color: white;
+          }
+        }
+      }
+    }
+    .userpagelist {
+      border-right: solid 1px  rgba(128, 128, 128, 0.3);
+      padding: 0 0;
+      a {
+        display: block;
+        text-decoration: none;
+        width:100%;
+        height:100%;
+        color: rgba(0, 0, 0, 0.7);
+        text {
+          display: flex;
+          justify-content: center;
+        }
+      }
+    }
+    .favorites {
+      border-left: solid 1px  rgba(128, 128, 128, 0.3);
+      border-right: none;
+    }
+  }
+}
