--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,64 +1,100 @@
-.post
-  .post__user
-    .post__user__icon
-      - if @post.user.icon.url.present?
-        = image_tag @post.user.icon.url, class: '', size: '40x40'
-      - else
-        = image_tag 'egg-icon-gray.png', size: '40x40'
-    %div
-      %div
-        = @post.user.name
-      %div
-        @
-        = @post.user.acountid
-  .post__content
-    %div
-      %div 
-        = @post.created_at.strftime("%Y/%m/%d %H:%M")
-      %div
-        - if @post.image.url.present?
-          = image_tag @post.image.url, class: ''
-    %div
-      - if @post.body.present?
-        %p
-          = simple_format(@post.body)
-      - if user_signed_in? && current_user.id == @post.user_id
-        %ul
-          = link_to '削除', post_path(@post.id), method: :delete, data: { confirm: 'ほんとに消していいの？' }
-.comment
-  %input{type: "button", class: "comment__btn", value: "コメントボタン", id: "create_comment", onclick: "commentformbtnclick()" }
-  = form_with(model: [@post, @comment], local: true, class: "comment__new", id: "comment_form") do |f|
-    %h3
-      コメント
-    = f.file_field :image
-    = f.text_area :body, placeholder: "text" , rows: "10"
-    = f.submit "SEND"
-  
-  .comment__form
-  %div
-    コメント一覧
-    - if @comments
-      - @comments.each do |comment|
-        .post__user__icon
-          - if comment.user.icon.url.present?
-            = image_tag comment.user.icon.url, class: '', size: '40x40'
+.show
+  .show__header
+    .show__header__user
+      .show__header__user__left
+        .show__header__user__left__icon
+          - if @post.user.icon.url.present?
+            = image_tag @post.user.icon.url, class: '', size: '40x40'
           - else
             = image_tag 'egg-icon-gray.png', size: '40x40'
-        %div
+        .show__header__user__left__contents
+          .show__header__user__left__contents__name
+            = @post.user.name
+          .show__header__user__left__contents__else
+            .show__header__user__left__contents__else__id
+              @
+              = @post.user.acountid
+            .show__header__user__left__contents__else__gender
+              - if @post.user.gender == 1
+                Men
+              - else
+                Lady
+      .show__header__user__right
+        .show__header__user__right__follow
+          %button{type: "button", class: "btn btn-primary", id: "follow"}
+            フォローする
+  .show__contents
+    .show__contents__post
+      .show__contents__post__left.col-7
+        .show__contents__post__left__image
+          - if @post.image.url.present?
+            = image_tag @post.image.url, class: ''
+        .show__contents__post__left__favorite
+          .show__contents__post__left__favorite__box.col-2
+            - if current_user.already_favorited?(@post)
+              = link_to post_favorite_path(@post), method: :delete, class: 'favorite-delete', id: "favorite-delete", remote: true, onclick: "favoritedeleteclick()"  do
+                .show__contents__post__left__favorite__box__icon
+                  = fa_icon 'heart', class: 'icon'
+                .show__contents__post__left__favorite__box__count
+                  = @post.favorites.count
+            - else
+              = link_to post_favorites_path(@post,@favorites), method: :post, class: 'favorite-create', id: "favorite-create", remote: true, onclick: "favoritecreateclick()" do
+                .show__contents__post__left__favorite__box__icon
+                  = fa_icon 'heart-o', class: 'icon'
+                .show__contents__post__left__favorite__box__count
+                  = @post.favorites.count
+      .show__contents__post__right.col-5
+        .show__contents__post__right__title
+          今日は個人アプリ発表会
+        .show__contents__post__right__introduction
+          マッシュ | 175cm | OSEANTOKYO
+          - if user_signed_in? && current_user.id == @post.user_id
+            = link_to post_path(@post.id), method: :delete, data: { confirm: 'ほんとに消していいの？' } do
+              = fa_icon 'trash 2x', class: 'icon'
+        .show__contents__post__right__body
+          - if @post.body.present?
+            %p
+              = simple_format(@post.body)
+        .show__contents__post__right__date
+          = @post.created_at.strftime("%Y/%m/%d %H:%M")
+    .show__comments
+  
+  .comment
+    %input{type: "button", class: "comment__btn", value: "コメントボタン", id: "create_comment", onclick: "commentformbtnclick()" }
+    = form_with(model: [@post, @comment], local: true, class: "comment__new", id: "comment_form") do |f|
+      %h3
+        コメント
+      = f.file_field :image
+      = f.text_area :body, placeholder: "text" , rows: "10"
+      = f.submit "SEND"
+    
+    .comment__form
+    %div
+      コメント一覧
+      - if @comments
+        - @comments.each do |comment|
+          .post__user__icon
+            - if comment.user.icon.url.present?
+              = image_tag comment.user.icon.url, class: '', size: '40x40'
+            - else
+              = image_tag 'egg-icon-gray.png', size: '40x40'
           %div
-            = comment.user.name
-          %div
-            @
-            = comment.user.acountid
-          %div
-            = comment.created_at.strftime("%Y/%m/%d %H:%M")
-        - if comment.body.present?
-          %p
-            = simple_format(comment.body)
-        - if comment.image.url.present?
-          = image_tag comment.image.url, class: ''
-        - if user_signed_in? && current_user.id == comment.user_id
-          %ul
-            = link_to '削除', post_comment_path(@post,comment), method: :delete, data: { confirm: 'ほんとに消していいの？' }
-        
-        
+            %div
+              = comment.user.name
+            %div
+              @
+              = comment.user.acountid
+            %div
+              = comment.created_at.strftime("%Y/%m/%d %H:%M")
+          - if comment.body.present?
+            %p
+              = simple_format(comment.body)
+          - if comment.image.url.present?
+            = image_tag comment.image.url, class: ''
+          - if user_signed_in? && current_user.id == comment.user_id
+            %ul
+              = link_to '削除', post_comment_path(@post,comment), method: :delete, data: { confirm: 'ほんとに消していいの？' }
+
+
+          
+          
