--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -26,7 +26,7 @@
         opacity: 0.9;
         border: none;
       }
-      #edit {
+      #user-edit {
         width: 50%;
         background-color: #808080;
         opacity: 0.5;
