--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,21 +1,23 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "bootstrap";
 @import "header";
 @import "footer";
 @import "reset";
-@import "posts";
+@import "posts/*";
 @import "users";
-@import "font-awesome";
 
 
 html{
   width: 100%;
   height: 100%;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
   height: 100%;
   width: 100%;
+  color: rgb(74, 74, 74) !important;
 }
 .main {
   height: calc(100% - 7em);
@@ -32,4 +34,8 @@ body{
     margin: 0 auto;
     // padding: 2em 0;
   }
+}
+.trash {
+  font-size: 1rem;
+  color: red;
 }
