--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -51,18 +51,18 @@
     }
   }
   &__contents {
-    margin-top: 5em;
+    margin-top: 6em;
     // width: 100%;
     &__post {
-      // width: 100%;
       display: flex;
+      width: calc(100% - 1.5em);
       &__left {
+        margin-right: 1.5em;
         // width:100%;
         padding: 0 0 !important;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
         border-radius: 0.25em;
-        margin-right: 0.5em;
         // box-sizing: border-box;
         &__image {
           width: 100%;
@@ -75,11 +75,15 @@
             margin:0 auto;
           }
         }
-        &__favorite{
-          &__box {
+        &__bottom {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0.5em;
+          &__favorite {
             border: solid 1px rgba(128, 128, 128, 0.3);
             padding: 0 0 !important;
-            margin: 0.5em;
+            // margin: 0.5em 0;
             border-radius: 0.25em;
             a {
               display: flex;
@@ -92,9 +96,12 @@
               .show__contents__post__left__favorite__box__count {
                 margin: 0 0.25em;   
               }
+            }
             a:hover {
             }
-            }
+          }
+          &__comment {
+            
           }
         }
       }
@@ -102,7 +109,6 @@
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
         border-radius: 0.25em;
-        margin-left: 0.5em;
         padding:1em 0;
         // width:100%;
         box-sizing: border-box;
@@ -138,14 +144,69 @@
         }
       }
     }
-    &__comments {
-
-    }
   }
-}
-.comment {
-  &__new {
-    display: none;
+  &__comments {
+    display: flex;
+    width: calc(100% - 1.5em);
+    margin-bottom: 2em;
+    &__container {
+      margin-right: 1.5em;
+      background-color: #fff;
+      border: solid 1px rgba(128, 128, 128, 0.3);
+      border-radius: 0.25em;
+      padding: 1em;
+      &__head {
+      }
+      &__comments {
+        display: flex;
+        &__comment {
+          width:24%;
+        }
+      }
+    }
+    .comment {
+      display: none;
+      background-color: #fff;
+      border: solid 1px rgba(128, 128, 128, 0.3);
+      border-radius: 0.25em;
+      padding: 1em;
+      &__form {
+        display: flex;
+        &__icon {
+          margin-right: 0.5em;
+          img {
+            border-radius: 1.5em;
+          }
+        }
+        &__new {
+          display: inline-block;
+          width: 100%;
+          &__body {
+            width: 100%;
+            #comment_body {
+              width: 100%;
+              display: block;
+              border: none;
+            }
+            #comment_body {
+              outline: 0;
+            }
+          }
+          &__bottom {
+            display:flex;
+            justify-content: flex-end;
+            margin: 0.5em;
+            &__image {
+              font-size: 1.5rem;
+              margin-right: 0.5em;
+            }
+            &__submit {
+
+            }
+          }
+        }
+      }
+    }
   }
 }
 
