--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,18 +3,18 @@
     .header__container__search
       %input{type: 'textarea'}
     .header__container__main-title
-      %h1.header__container__main-title__name
+      = link_to root_path, class: 'header__container__main-title__name' do
         HairStagram
     .header__container__right
       .header__container__right__user
         - if user_signed_in?
-          = link_to  user_path(current_user.id) do
+          = link_to user_path(current_user.id) do
             - if current_user.icon.url.present?
               = image_tag current_user.icon.url, class: '', size: '40x38'
             - else
               = image_tag 'egg-icon-gray.png', size: '40x38'
           @
-          = user.acountid
+          = current_user.acountid
       .header__container__right__devise
         - if user_signed_in?
           .header__container__post
