--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -5,6 +5,10 @@
   = f.text_field :title
   = f.fields_for :images do |img|
     = img.file_field :image, name: "post[images_attributes][0][image]", type: "file"
-    -# = img.file_field :image, name: "post[images_attributes][1][image]", type: "file"
+    = img.file_field :image, name: "post[images_attributes][1][image]", type: "file"
+    = img.file_field :image, name: "post[images_attributes][2][image]", type: "file"
+    = img.file_field :image, name: "post[images_attributes][3][image]", type: "file"
+    = img.file_field :image, name: "post[images_attributes][4][image]", type: "file"
+    = img.file_field :image, name: "post[images_attributes][5][image]", type: "file"
   = f.text_area :body, placeholder: "text" , rows: "10"
   = f.submit "SEND"
