--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -5,9 +5,9 @@
   width: 22.5%;
   margin: 1.25%;
   &__image {
+    height:300px;
     img {
-      width:100%;
-      height: auto;
+      margin: 0 auto;
     }
   }
   &__user {
