--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -39,6 +39,16 @@
               border-right: solid 1px rgba(128, 128, 128, 0.7);
               padding: 0 0.5em;
             }
+            &__salon {
+              padding: 0 0.5em;
+              // opacity: 0.8;
+              color: #4a4a4a ;
+              text-decoration: underline;
+            }
+            &__salon:hover {
+              opacity: 0.3 !important;
+              text-decoration: none;
+            }
           }
         }
       }
@@ -62,17 +72,24 @@
         padding: 0 0 !important;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
-        border-radius: 0.25em;
+        border-radius: 0.25em 0.25em 0 0;;
         // box-sizing: border-box;
         &__image {
           width: 100%;
           height: auto;
+          border-bottom: solid 1px rgba(128, 128, 128, 0.3);
           img {
-            
             border-radius: 0.25em 0.25em 0 0;
             width: 100%;
             height: auto;
             margin:0 auto;
+          }
+          .slider-nav {
+            img {
+              width:95%;
+              height:auto;
+              border-radius: 0 0 0 0 !important;
+            }
           }
         }
         &__bottom {
@@ -80,6 +97,7 @@
           justify-content: space-between;
           align-items: center;
           padding: 0.5em;
+          background-color: #fffcf8;
           &__favorite {
             border: solid 1px rgba(128, 128, 128, 0.3);
             padding: 0 0 !important;
@@ -121,13 +139,17 @@
           color: rgba(0, 0, 0, 0.6);
           border-bottom: solid 1px rgba(128, 128, 128, 0.3);
           padding: 0.5em 0;
-          a {
+          &__salon {
+            color: rgb(117, 117, 117);
+            text-decoration: underline;
+          }
+          &__trash {
             float: right;
             font-size: 75%;
-            color: rgb(117, 117, 117);
           }
           a:hover {
             opacity: 0.3 !important;
+            text-decoration: none;
           }
         }
         &__body {
@@ -153,7 +175,8 @@
       margin-right: 1.5em;
       background-color: #fff;
       border: solid 1px rgba(128, 128, 128, 0.3);
-      border-radius: 0.25em;
+      border-top: none;
+      border-radius: 0 0 0.25em 0.25em;
       padding: 1em;
       &__head {
       }
@@ -216,6 +239,6 @@
 }
 
 .favorite-create {
-  background-color: rgb(255, 252, 248);
+  background-color: rgb(255, 255, 255);
   color: gray;
 }
