--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -23,9 +23,10 @@
         = link_to post_path(post.id), method: :delete, data: { confirm: 'ほんとに消していいの？' } do
           = icon "far", "trash-alt", class: "trash"
       - else
-        - if current_user.following? post.user
-          %button{type: "button", class: "", id: "un-follow"}
-            = link_to "フォロー解除", {controller: :users,action: :unfollow,user_id: post.user.id}, method: :put
-        - else
-          %button{type: "button", class: "", id: "follow"}
-            = link_to "フォロー", {controller: :users,action: :follow,user_id: post.user.id}, method: :put
+        - if user_signed_in?
+          - if current_user.following? post.user
+            %button{type: "button", class: "", id: "un-follow"}
+              = link_to "フォロー解除", {controller: :users,action: :unfollow,user_id: post.user.id}, method: :put
+          - else
+            %button{type: "button", class: "", id: "follow"}
+              = link_to "フォロー", {controller: :users,action: :follow,user_id: post.user.id}, method: :put
