--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,10 @@
 %header.header
   .header__container
     .header__container__search
-      %input{type: 'textarea'}
+      = form_with(model: @post, url: search_posts_path, method: :get, local: true, class: "header__container__search__form") do |f|
+        = f.search_field :search, name: "keyword", placeholder: "スタイルやユーザーを探す", class: "header__container__search__form__input", autocomplete: "off"
+        = f.button type: :submit, class: 'header__container__search__form__button' do
+          = icon 'fas', 'search'
     .header__container__main-title
       = link_to root_path, class: 'header__container__main-title__name' do
         HairStagram
