--- a/app/assets/stylesheets/layouts/footer.scss
+++ b/app/assets/stylesheets/layouts/footer.scss
@@ -44,6 +44,13 @@
         display: flex;
         justify-content: center;
       }
+      .selecting {
+        background-color: rgba(0, 0, 0, 0.8);
+        text-align: center;
+        color: white;
+        opacity: 1.0 !important;
+        width:100%;
+      }
     }
   }
 }
