--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -2,12 +2,18 @@
   background-color: #fff;
   border: solid 1px rgba(128, 128, 128, 0.3);
   border-radius: 0.25em;
-  width: 22.5%;
-  margin: 1.25%;
+  width: 32%;
+  margin: 1em 2% 1em 0;
   &__image {
-    height:300px;
+    padding-top:140%;
+    position: relative;
     img {
-      margin: 0 auto;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   &__user {
@@ -30,8 +36,11 @@
 
       }
     }
-    &__follow-edit {
-
+    &__follow-trash {
+      button {
+        font-size: 0.5vh;
+        padding: 0.8vh 0.8vh !important;
+      }
     }
   }
 }
