--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -1,5 +1,13 @@
-.posts {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 2em 0;
+.post-index {
+  .posts {
+    display: flex;
+    flex-wrap: wrap;
+    .post {
+      margin: 1em 2% 1em 0;
+      width: 23.5%;
+    }
+    .post:nth-child(4n) {
+      margin: 1em 0;
+    }
+  }
 }
