--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -7,7 +7,7 @@
     position: fixed;
     z-index: 999;
     left: 0;
-    top: 4em;
+    top: 3.5em;
     width: 100%;
     height: 4em;
     &__user {
@@ -53,9 +53,14 @@
         }
       }
       &__right {
-        line-height: 4em;
+        width: 20%;
         &__follow {
-
+          height:100%;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          button {
+          }
         }
       }
     }
