--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,18 +3,34 @@
     .footer__container__content
       = link_to root_path do
         .footer__container__content__ranking
-          ランキング
+          - if current_page?(controller: '/posts', action: 'ranking')
+            .selecting
+              ランキング
+          - else
+            ランキング
     .footer__container__content
-      = link_to root_path do
-        .footer__container__content__timeline
-          タイムライン
+      -if user_signed_in?
+        = link_to timeline_user_path(current_user) do
+          .footer__container__content__timeline
+            - if current_page?(controller: '/users', action: 'timeline', id: current_user.id)
+              .selecting
+                タイムライン
+            - else
+              タイムライン
+      -else
+        = link_to root_path do
+          .footer__container__content__timeline
+            タイムライン
     .footer__container__content
       -if user_signed_in?
         = link_to user_path(current_user.id) do
           .footer__container__content__mypage
-            マイページ
+            - if current_page?(controller: '/users', action: 'show', id: current_user.id)
+              .selecting
+                マイページ
+            - else
+              マイページ
       -else
         = link_to root_path do
           .footer__container__content__mypage
             マイページ
-
